2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct complex arcsin computation per issue [#2245].

	* mingwex/complex/casin_generic.c: New file; it replaces...
	* mingwex/complex/casin.c: ...this; it is now obsolete; delete it.
	* mingwex/complex/casinf.c mingwex/complex/casinl: Likewise.

2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct complex square root computation per issue [#2246].

	* include/math.h (hypotf): Redirect __CRT_INLINE call to...
	(_hypot): ...this MSVCRT.DLL exported function, so avoiding...
	(hypot): ...this libmoldname.a indirection.

	* mingwex/complex/csqrt_generic.c: New file; it replaces...
	* mingwex/complex/csqrt.c: ...this; it is now obsolete; delete it.
	* mingwex/complex/csqrtf.c mingwex/complex/csqrtl: Likewise.

2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adjust header guards to resolve issue [#2244].

	* include/_mingw.h (_POSIX_C_SOURCE): Define it implicitly...
	[_GNU_SOURCE || _BSD_SOURCE || _POSIX_SOURCE || !__STRICT_ANSI__]:
	...when any of these prevail, or as appropriate to correspond with...
	[_XOPEN_SOURCE]: ...this; set conformance level accordingly.

	* include/math.h [_POSIX_C_SOURCE || defined _USE_MATH_DEFINES]
	(M_E, M_LOG2E, M_LOG10E, M_LN2, M_LN10, M_PI, M_PI_2, M_PI_4, M_1_PI)
	(M_2_PI, M_2_SQRTPI, M_SQRT2, M_SQRT1_2): Define them, irrespective...
	[__STRICT_ANSI__]: ...of this; replace guard accordingly.

2014-12-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add implementation of mkstemp() and mkdtemp() functions.

	* mingwex/cryptnam.c: New file; it implements...
	(__mingw_crypto_tmpname): ...this helper function; it generates a
	cryptographically secure sequence of characters, used as the random
	component in temporary file and directory names.

	* mingwex/mkstemp.c: New file; it implements...
	(__mingw_mkstemp): ...this provider of mkstemp() functionality.

	* mingwex/mkdtemp.c: New file; it implements...